css/style.css
/* ... */
.product-3in1-classic {position:absolute; left:96px; top:14px}
.product-3in1-caramel {position:absolute; left:163px; top:16px}
.product-alta-rica {position:absolute; left:174px; top:-45px}
.product-classic {position:absolute; left:230px; top:51px}
.product-espresso {position:absolute; left:98px; top:-155px}
.product-gold-classic {position:absolute; left:128px; top:-113px}
.product-gold-barista {position:absolute; left:327px; top:53px}
.product-green-blend {position:absolute; left:129px; top:-94px}
.product-montego {position:absolute; left:56px; top:-59px}

.product-content {position:absolute; left:172px; top:92px; color:#fff; font-size:14px; line-height:19px}
.product-breadcrumbs {font-size:13px; line-height:16px; font-weight:bold; text-transform:uppercase; padding:0 0 0 22px; background:url(../images/breadcrumbs.png) no-repeat left 2px}
.product-breadcrumbs a {color:#fff}
.product-content h3 {margin:0; padding:24px 0 10px 0; font:16px/19px SansRoundedWeb, arial, helvetica, sans-serif; text-transform:uppercase; color:#fff; letter-spacing:1px}
.product-content h3 span {text-transform:lowercase}
.product-text {width:200px; font-size:12px; line-height:14px}
.product-text sup {vertical-align:baseline; position:relative; top:-4px}
.product-text-detail {position:relative; overflow:hidden; max-height:70px}
.product-text-detail-open {max-height:none}
.product-text-detail-inner {position:relative}
.product-text p {margin:0; padding:0}
.product-text .dg-vk {padding:18px 0 0 0}
.product-text .dg-vk+.dg-vk {padding:7px 0 0 0}
.product-text a,
.product-text a:hover {color:#fff}
.product-text-detail-link {display:none; text-align:right; font:bold 12px/14px SansRoundedWeb, arial, helvetica, sans-serif; padding:14px 0 0 0; letter-spacing:1px}

.product-text-barista {text-transform:uppercase; color:#d9230b; font:15px/20px SansRoundedWeb, arial, helvetica, sans-serif; padding:34px 0 0 0; white-space:nowrap}
.product-text-barista a,
.product-text-barista a:hover {color:#d9230b}
.product-text-barista img {vertical-align:middle; margin:0 0 2px 3px}

.product-links {position:absolute; left:749px; top:300px; font:14px/16px SansRoundedWeb, arial, helvetica, sans-serif; width:140px}
.page-classic .product-links {left:755px}
.product-links a,
.product-links a:hover {color:#fff}
.product-link {padding:0 0 9px 17px; background:url(../images/product-link.png) no-repeat left 2px; position:relative}
.product-link-2 {white-space:nowrap; text-transform:uppercase; font-size:16px; line-height:19px; padding-bottom:3px}
.product-link-2 sup {vertical-align:baseline; position:relative; top:-4px}
.product-links-social {white-space:nowrap; position:relative; margin-left:-8px; padding:0 0 30px 0}
.page-classic .product-links-social {padding-left:22px}

.product-window {display:none; position:absolute; left:-152px; top:-371px; width:332px; height:333px; background:url(../images/product-window.png); z-index:99}
.recipes-var-nutrition .product-window {background:url(../images/product-window-2.png)}
.product-window-inner {display:table; width:332px; height:333px}
.product-window-content {display:table-cell; width:332px; height:333px; text-align:center; vertical-align:middle; font:10px/11px arial, helvetica, sans-serif; height:auto!ie}
.product-window-content table {margin:0 50px; color:#666; text-align:left; border-collapse:collapse}
.product-window-content table th {font-weight:bold; color:#000; border-left:1px solid #d9d9d9; vertical-align:bottom; padding:2px 8px; text-align:left; white-space:nowrap}
.product-window-content table th:first-child {border-left:none; padding-left:0}
.product-window-content table td {border-left:1px solid #d9d9d9; border-top:1px solid #d9d9d9; vertical-align:top; padding:3px 8px 2px 8px; text-align:left}
.product-window-content table td:first-child {border-left:none; font-weight:bold; padding-left:0}
.product-window-close {display:block; position:absolute; right:71px; top:20px; width:11px; height:10px; background:url(../images/product-window-close.png)}
.product-window-text {text-align:left; padding:0 0 0 17px; color:#a20909; font:16px/19px SansRoundedWeb, arial, helvetica, sans-serif; background:url(../images/product-window-text.png) no-repeat left 2px; margin:0 18px}

.test {width:100%; position:relative; z-index:3}
.test:after {content:"."; display:block; clear:both; visibility:hidden; height:0}
.test-form {float:left; width:320px}
.test-form-title {font:24px/26px SansRoundedWeb, arial, helvetica, sans-serif; color:#bfbfbf; letter-spacing:1px; padding:0 0 38px 0}
.test-form  form {margin:0; padding:0}
.test-form-question {font:14px/16px SansRoundedWeb, arial, helvetica, sans-serif; text-transform:uppercase; color:#dd250b; padding:0 0 12px 0}
.test-form-variants {font-size:14px; color:#000; position:relative}
.test-form-question-prev,
.test-form-question-next {display:block; position:absolute; width:42px; height:66px; background:url(../images/test-form-arrows.png); bottom:40px; font:18px/22px SansRoundedWeb, arial, helvetica, sans-serif; color:#cac9c9; text-align:center}
.test-form-question-prev {left:-87px}
.test-form-question-prev span {display:none; width:149px; height:56px; padding:35px 0 0 0; background:url(../images/test-form-prev.png); position:absolute; left:-85px; top:90px}
.test-form-question-prev:hover {background-position:left -66px; color:#cac9c9}
.test-form-question-prev:hover span {display:block}
.test-form-question-next {right:-47px; background-position:-42px top}
.test-form-question-next span {display:none; width:149px; height:56px; padding:37px 0 0 0; background:url(../images/test-form-next.png); position:absolute; left:-94px; top:87px}
.test-form-question-next:hover {background-position:-42px -66px; color:#cac9c9}
.test-form-question-next:hover span {display:block}

.test-res {float:right; width:563px; height:563px; position:relative; background:url(../images/test-res-bg.png); margin:-107px 0 0 0}
.test-res-cup-1 {position:absolute; left:131px; top:134px}
/* ... */

